@@ -1,10 +1,11 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         NEXT-init
-version:      1.01
+version:      1.02
 version_from: 
 installdirs:  site
 requires:
+    NEXT:                          0
     strict:                        0
     warnings:                      0
 
