@@ -1,5 +1,11 @@
 Most recent changes on top.
 
+Sat Sep 25 02:44:18 EDT 2004
+
+- Update the Makefile.PL description.
+
+- Added NEXT to the required modules.
+
 Sat Sep 25 01:28:29 EDT 2004
 
 - Single array type didn't cut it. Split them into queue and 
